# image_scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
documentation/: CODE_REVIEW.md  CODE_REVIEW_2024.md  CODE_REVIEW_FINAL.md  CODE_REVIEW_FOLLOWUP.md  EFFICIENCY_REVIEW.md  NOISE_RESIDUAL_EFFICIENCY.md  SCIENTIFIC_RIGOR_EVALUATION.md  filter_spec.md  methods.md  prd.md  training_performance.md  wavelet_detector_README.md
examples/: basic_usage.py  compare_test_images.py  compare_two_images.py  detect_optics.py  inference_wavelet.py  test_optics.py  train_wavelet.py  visualize_fft.py
src/image_screener/: __init__.py  dft.py  feature_extractor.py  optics_consistency.py  optics_visualization.py  preprocessing.py  spectral_peak_detector.py  wavelet_detector.py
src/image_screener/optics_tests/: __init__.py  constants.py  types.py
tests/: __init__.py  test_dft.py  test_preprocessing.py  test_spectral_peak_detector.py  test_wavelet_detector.py
